--- a/app/globals.css
+++ b/app/globals.css
@@ -117,3 +117,10 @@ body {
     @apply bg-background text-foreground;
   }
 }
+@font-face {
+  font-family: "Inter";
+  src: url('/inter.ttf');
+}
+*{
+  font-family: "Inter";
+}
